--- a/pokegifs/pokegif.html
+++ b/pokegifs/pokegif.html
@@ -10,6 +10,12 @@
   <script src="scripts/sketch.js"></script>
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/narrow.css">
+  <style>
+  body{
+  	background-image: url(images/background.png);
+	background-repeat: repeat;
+  }
+  </style>
 </head>
 
 <body>
