--- a/pokegifs/pokegif.html
+++ b/pokegifs/pokegif.html
@@ -26,6 +26,10 @@
 <div class = "searchBox">
 	<input type = "text" onfocus="this.value=''" value="Enter name/id" id = "input"></input>
 	<button type="button"  onclick="get_gif('ditto')" id="submit">Submit</button>
+	</br>
+	<div  id = "shiny_check">
+	<label>shiny <input type="checkbox" id="shiny" name="shiny" value="shiny"></label>
+	</div>
 </div>
 </div>
 
@@ -45,7 +49,7 @@ input.addEventListener("keyup", function(event) {
 
 <div id = "footer">
 <p>
-This page makes use of the <a href="https://pokeapi.co/">PokeAPI</a>. To find more of my projects, please go to my <a href = "">GitHub page</a>.
+This page makes use of the <a href="https://pokeapi.co/">PokeAPI</a>. To find more of my projects, please go to my <a href = "https://github.com/David-Ellis">GitHub page</a>.
 </p>
 <div>
 </body>
