improved mobile design

--- a/pokegifs/pokegif.html
+++ b/pokegifs/pokegif.html
@@ -25,10 +25,10 @@
 
 <div class = "searchBox">
 	<input type = "text" onfocus="this.value=''" value="Enter name/id" id = "input"></input>
-	<button type="button"  onclick="get_gif('ditto')" id="submit">Submit</button>
+	<button type="button"  onclick="get_gif()" id="submit">Submit</button>
 	</br>
 	<div  id = "shiny_check">
-	<label>shiny <input type="checkbox" id="shiny" name="shiny" value="shiny"></label>
+	<label>shiny <input type="checkbox" onclick="get_gif()" id="shiny" name="shiny" value="shiny"></label>
 	</div>
 </div>
 </div>
