added Google analytics

--- a/pokegifs/pokegif.html
+++ b/pokegifs/pokegif.html
@@ -2,20 +2,30 @@
 <html lang="">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-  <title>Pokémon gif finder</title>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-  <script src="scripts/sketch.js"></script>
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" href="style/narrow.css">
-  <style>
-  body{
-  	background-image: url(images/background.png);
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YFWY2SLGWT"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-YFWY2SLGWT');
+	</script>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Pokémon gif finder</title>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+	<script src="scripts/sketch.js"></script>
+	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/narrow.css">
+	<style>
+	body{
+	background-image: url(images/background.png);
 	background-repeat: repeat;
-  }
-  </style>
+	}
+	</style>
 </head>
 
 <body>
