--- a/pokegifs/pokegif.html
+++ b/pokegifs/pokegif.html
@@ -15,7 +15,24 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!--  General META Tags -->
+    <meta property="og:title" content="Pokémon gif finder"/>
+    <meta property="og:image" content="https://david-ellis.github.io/images/og-image.html" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:url" content="https://david-ellis.github.io/pokegifs/pokegif.html" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="David Ellis">
+	
+	<!--  Twitter META Tags -->
+    <meta name="twitter:title" content="Pokémon gif finder">
+    <meta name="twitter:description" content="Simple Pokémon gif finder. Great for twitch/streaming overlays. Easy to use. Includes 649 Pokémon + shinies.">
+    <meta name="twitter:image" content="https://david-ellis.github.io/images/og-image.html">
+    <meta name="twitter:card" content="summary_large_image">
+
 	<title>Pokémon gif finder</title>
+	<link href="images/favicon.png" rel="icon" type="image/x-icon" />
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
 	<script src="scripts/sketch.js"></script>
 	<link rel="stylesheet" href="style/style.css">
