--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class = "dropdown">
 		<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Mini projects <i class="fa fa-caret-down"></i></button>
 		<div class = "dropcont" id = "drop2">
-			<a href="mini-projects\pokegifs\pokegif.html">Pokegif finder</a>
+			<a href="mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
 			<a href="mini-projects\weather\weather.html">Weather app</a>
 		</div>
 	</div>
