--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -74,7 +74,7 @@
 	<div class = "dropdown">
 		<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Mini projects <i class="fa fa-caret-down"></i></button>
 		<div class = "dropcont" id = "drop2">
-			<a href="#">Pokegif finder</a>
+			<a href="pokegif.html">Pokégif finder</a>
 			<a href="..\weather\weather.html">Weather app</a>
 		</div>
 	</div>
