--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -52,7 +52,7 @@
 	<div class = "dropdown">
 		<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Mini projects <i class="fa fa-caret-down"></i></button>
 		<div class = "dropcont" id = "drop2">
-			<a href="../pokegifs/pokegif.html">Pokegif finder</a>
+			<a href="../pokegifs/pokegif.html">Pokégif finder</a>
 			<a href="weather.html">Weather app</a>
 		</div>
 	</div>
