--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<title>David Ellis</title>
 	<link rel="stylesheet" href="style/main-style.css">
 	<script src="scripts/main-script.js"></script>
+	<link rel="stylesheet" href="style/main-narrow.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
