--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -40,6 +40,7 @@
 
 	<!-- Main css and js -->
 	<link rel="stylesheet" href="../../style/main-style.css">
+	<link rel="stylesheet" href="../../style/main-narrow.css">
 	<script src="../../scripts/main-script.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
