--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -65,6 +65,12 @@
 	</div>
 
 	<div class = "dropdown">
+		<a href="../../physics.html">
+			<button>Physics</button>
+		</a>
+	</div>
+
+	<div class = "dropdown">
 		<button class="dropbtn" id="button1" onclick="myFunction('drop1')">Projects <i class="fa fa-caret-down"></i></button>
 		<div class = "dropcont" id = "drop1">
 			<a href="https://howsmynhs.co.uk/" target="_blank">Hows my NHS?</a>
