Added minor text to homepage

--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
 </div>
 
 <div>
-	<p id = "uh-oh">Uh oh...</br></br>it appears I haven't written anything here yet!</br></br>
-		<span style="font-size: 4em;">🤷</span>
-	</p>
+
+	<img src="images/me.jpg" id="mypic" alt="Picture of me, David Ellis." >
+
+	<p id = "hi">Hi, I'm David Ellis. Click the navigation links above to check out what I've been up to.</p>
+	</p>	
+
 </div>
 
 </body>
