minor formatting improvement

--- a/physics.html
+++ b/physics.html
@@ -15,7 +15,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>David Ellis</title>
+	<title>David Ellis - Axion Minicluster PhD</title>
 	<link rel="stylesheet" href="style/main-style.css">
 	<script src="scripts/main-script.js"></script>
 	<link rel="stylesheet" href="style/main-narrow.css">
@@ -118,7 +118,6 @@
         <a href="https://en.wikipedia.org/wiki/Gravitational_microlensing">gravitational microlensing</a>.
     </p>
 
-    </br>
 
     <h2>Publications</h2>
     <ul>
@@ -127,8 +126,6 @@
         <li><b>Microlensing of Axion Miniclusters</b>. In preparation.</li>
         <li><b>Introduction to Dark Matter</b> (Textbook). In preparation. </li>
     </ul>
-
-    </br>
 
     <h2>Presentations</h2>
     <ul>
