added postcode search functionality and basic styling

--- a/mini-projects/ucu-strike/find-a-picket.html
+++ b/mini-projects/ucu-strike/find-a-picket.html
@@ -37,7 +37,7 @@
 
 <body>
 <div id = "mainBox">
-  <h1 id = "mainTitle">Find your nearest picket</h1>
+  <h1 id = "mainTitle">UCU Picket Finder</h1>
 
 
 <div class = "searchBox">
