Added links to picket page and favicon

--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -83,7 +83,9 @@
 		<div class = "dropcont" id = "drop2">
 			<a href="pokegif.html">Pokégif finder</a>
 			<a href="..\weather\weather.html">Weather app</a>
+			<a href="..\ucu-strike\find-a-picket.html">Picket Finder</a>
 			<a href="..\games\kaboom.html">First Kaboom</a>
+			
 		</div>
 	</div>
 
