--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -61,6 +61,7 @@
 		<div class = "dropcont" id = "drop2">
 			<a href="../pokegifs/pokegif.html">Pokégif finder</a>
 			<a href="weather.html">Weather app</a>
+			<a href="..\ucu-strike\find-a-picket.html">Picket Finder</a>
 			<a href="..\games\kaboom.html">First Kaboom</a>
 		</div>
 	</div>
