--- a/mini-projects/ucu-strike/find-a-picket.html
+++ b/mini-projects/ucu-strike/find-a-picket.html
@@ -19,6 +19,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="favicon.png" rel="icon" type="image/x-icon" />
 
+
+  	<!--  General META Tags -->
+  <meta property="og:title" content="UCU Picket Line Finder"/>
+  <meta property="og:image" content="https://david-ellis.github.io/mini-projects/ucu-strike/og-image.html" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:url" content="https://david-ellis.github.io/mini-projects/ucu-strike/find-a-picket.html" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:type" content="website" />
+
+  <!--  Twitter META Tags -->
+  <meta name="twitter:title" content="UCU Picket Line Finder">
+  <meta name="twitter:description" content="Enter your postcode to find the nearest UCU picket line that you can support!">
+  <meta name="twitter:image" content="https://david-ellis.github.io/mini-projects/ucu-strike/og-image.html">
+  <meta name="twitter:card" content="summary_large_image">
+
   <title>UCU Picket Finder.</title>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
   <script src="sketch.js"></script>
