Fixed pokegif og image

--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -17,7 +17,7 @@
 
 	<!--  General META Tags -->
     <meta property="og:title" content="Pokémon gif finder"/>
-    <meta property="og:image" content="https://david-ellis.github.io/images/og-image.html" />
+    <meta property="og:image" content="https://david-ellis.github.io/images/og-image.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://david-ellis.github.io/pokegifs/pokegif.html" />
     <meta property="og:image:width" content="1200" />
@@ -28,7 +28,7 @@
 	<!--  Twitter META Tags -->
     <meta name="twitter:title" content="Pokémon gif finder">
     <meta name="twitter:description" content="Simple Pokémon gif finder. Great for twitch/streaming overlays. Easy to use. Includes 649 Pokémon + shinies.">
-    <meta name="twitter:image" content="https://david-ellis.github.io/images/og-image.html">
+    <meta name="twitter:image" content="https://david-ellis.github.io/images/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
 
 	<title>Pokémon gif finder</title>
