--- a/mini-projects/ucu-strike/find-a-picket.html
+++ b/mini-projects/ucu-strike/find-a-picket.html
@@ -17,18 +17,19 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Want to support the UCU strikes but don't know which is your nearest striking university? Find out here">
   <link href="favicon.png" rel="icon" type="image/x-icon" />
 
-
-  	<!--  General META Tags -->
-  <meta property="og:title" content="UCU Picket Line Finder"/>
+  <!--  General META Tags -->
+  <meta property="og:title" content="UCU Picket Line Finder" />
   <meta property="og:image" content="https://david-ellis.github.io/mini-projects/ucu-strike/og-image.png" />
   <meta property="og:image:type" content="image/png" />
-  <meta property="og:url" content="https://david-ellis.github.io/mini-projects/ucu-strike/find-a-picket.html" />
+  <meta property="og:url" content="https://howsmynhs.co.uk/hospitals/england.html" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
-
+  <meta property="og:site_name" content="David Ellis">
+  
   <!--  Twitter META Tags -->
   <meta name="twitter:title" content="UCU Picket Line Finder">
   <meta name="twitter:description" content="Enter your postcode to find the nearest UCU picket line that you can support!">
