--- a/mini-projects/ucu-strike/find-a-picket.html
+++ b/mini-projects/ucu-strike/find-a-picket.html
@@ -23,10 +23,11 @@
   <!--  General META Tags -->
   <meta property="og:title" content="UCU Picket Line Finder" />
   <meta property="og:image" content="https://david-ellis.github.io/mini-projects/ucu-strike/og-image.png" />
-  <meta property="og:image:type" content="image/png" />
-  <meta property="og:url" content="https://howsmynhs.co.uk/hospitals/england.html" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
+
+  <meta property="og:url" content="https://david-ellis.github.io/mini-projects/ucu-strike/find-a-picket.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="David Ellis">
   
@@ -35,6 +36,8 @@
   <meta name="twitter:description" content="Enter your postcode to find the nearest UCU picket line that you can support!">
   <meta name="twitter:image" content="https://david-ellis.github.io/mini-projects/ucu-strike/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:width" content= "1200" />
+<meta name="twitter:image:height" content= "630" />
 
   <title>UCU Picket Finder</title>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
