--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<button class="dropbtn" id="button1" onclick="myFunction('drop1')">Projects <i class="fa fa-caret-down"></i></button>
 		<div class = "dropcont" id = "drop1">
 			<a href="https://howsmynhs.co.uk/" target="_blank">Hows my NHS?</a>
-			<a href="https://ndacademy.github.io/" target="_blank">New Dimension Academy</a>
+			<!-- <a href="https://ndacademy.github.io/" target="_blank">New Dimension Academy</a> -->
 		</div>
 	</div>
 
@@ -50,7 +50,7 @@
 		<div class = "dropcont" id = "drop2">
 			<a href="mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
 			<a href="mini-projects\weather\weather.html">Weather app</a>
-			<a href="mini-projects\ucu-strike\find-a-picket.html">Picket Finder</a>
+			<a href="mini-projects/royal-mail-strike/find-a-picket.html">Picket Finder</a>
 			<a href="mini-projects\games\kaboom.html">First Kaboom</a>
 		</div>
 	</div>
