added picket names

--- a/mini-projects/royal-mail-strike/find-a-picket.html
+++ b/mini-projects/royal-mail-strike/find-a-picket.html
@@ -39,7 +39,7 @@
   <meta name="twitter:image:width" content= "1200" />
 <meta name="twitter:image:height" content= "630" />
 
-  <title>UCU Picket Finder</title>
+  <title>Royal Mail Picket Line Finder</title>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
   <script src="sketch.js"></script>
   <link rel="stylesheet" href="style.css">
