added more picket info

--- a/mini-projects/royal-mail-strike/find-a-picket.html
+++ b/mini-projects/royal-mail-strike/find-a-picket.html
@@ -21,7 +21,7 @@
   <link href="favicon.png" rel="icon" type="image/x-icon" />
 
   <!--  General META Tags -->
-  <meta property="og:title" content="Royal Mail Picket Line Finder" />
+  <meta property="og:title" content="Birmingham Royal Mail Picket Line Finder" />
   <meta property="og:image" content="https://david-ellis.github.io/mini-projects/royal-mail-strike/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -54,11 +54,9 @@
 </head>
 
 
-
-
 <body>
 <div id = "mainBox">
-  <h1 id = "mainTitle">Royal Mail Picket Finder</h1>
+  <h1 id = "mainTitle">Birmingham Royal Mail</br>Picket Finder</h1>
 
 
 <div class = "searchBox">
