added back button to Brum SP page

--- a/mini-projects/royal-mail-strike/find-a-picket.html
+++ b/mini-projects/royal-mail-strike/find-a-picket.html
@@ -65,6 +65,11 @@
 </div>
 </div>
 
+<a href="https://birminghamsocialistparty.wordpress.com/" >
+  <img src="back.png" alt="Button to go back to main page" id = "back_button"> 
+</a>
+
+
 
 <script>
   var input = document.getElementById("input");
