further formatting changes

--- a/mini-projects/royal-mail-strike/find-a-picket.html
+++ b/mini-projects/royal-mail-strike/find-a-picket.html
@@ -57,7 +57,7 @@
 <body>
 <div id = "mainBox">
   <h1 id = "mainTitle">Birmingham Royal Mail</br>Picket Finder</h1>
-
+  <p style = "text-align:center; margin-top: -20pt; margin-bottom: 30pt;">Provided by the Birmingham Socialist Party</p>
 
 <div class = "searchBox">
 	<input type = "text" onfocus="this.value=''" value="Type postcode" id = "input"></input>
