--- a/index.html
+++ b/index.html
@@ -32,25 +32,23 @@
 	</div>
 
 	<div class = "dropdown">
+		<a href="other/DavidEllis_CV.pdf">
+			<button>CV</button>
+		</a>
+	</div>
+
+	<div class = "dropdown">
 		<a href="physics.html">
 			<button>Physics</button>
 		</a>
 	</div>
 
 	<div class = "dropdown">
-		<button class="dropbtn" id="button1" onclick="myFunction('drop1')">Projects <i class="fa fa-caret-down"></i></button>
-		<div class = "dropcont" id = "drop1">
-			<a href="https://howsmynhs.co.uk/" target="_blank">Hows my NHS?</a>
-			<!-- <a href="https://ndacademy.github.io/" target="_blank">New Dimension Academy</a> -->
-		</div>
-	</div>
-
-	<div class = "dropdown">
-		<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Mini projects <i class="fa fa-caret-down"></i></button>
+		<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Projects <i class="fa fa-caret-down"></i></button>
 		<div class = "dropcont" id = "drop2">
+			<a href="https://howsmynhs.co.uk/" target="_blank">Hows my NHS?</a>
 			<a href="mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
 			<a href="mini-projects\weather\weather.html">Weather app</a>
-			<a href="mini-projects/royal-mail-strike/find-a-picket.html">Picket Finder</a>
 			<a href="mini-projects\games\kaboom.html">First Kaboom</a>
 		</div>
 	</div>
