--- a/physics.html
+++ b/physics.html
@@ -128,7 +128,10 @@
     <ul>
         <li><b>Miniclusters Made Easy</b>. In: Physical Review D. Vol. 103, No. 083525, 2021.
             <a href="https://arxiv.org/abs/2006.08637">arXiv:2006.08637</a></li>
-        <li><b>Microlensing of Axion Miniclusters</b>. In preparation.</li>
+        <li><b>Structure of Axion Miniclusters</b>. Submitted to publisher. 
+            <a href="https://arxiv.org/abs/2204.13187">arXiv:2204.13187</a></li>
+        <li><b>Axion Miniclusters: Formation, Structure and Observational Signatures (PhD Thesis)</b>. 
+            <a href="http://dx.doi.org/10.53846/goediss-9416">doi:10.53846/goediss-9416</a></li>
         <li><b>Introduction to Dark Matter</b> (Textbook). In preparation. </li>
     </ul>
 
