--- a/physics.html
+++ b/physics.html
@@ -65,8 +65,8 @@
 
     <h2>Project Overview</h2>
     <p>
-        I am currently in the process of finishing my PhD at the University of Göttingen in Germany.
-        My research focuses on the formation of a particular 
+        In 2021, I completed my PhD at the University of Göttingen in Germany.
+        My research focused on the formation of a particular 
         <a href="https://en.wikipedia.org/wiki/Dark_matter">dark matter</a>
         structure known as axion miniclusters and whether we can detect them using a process called gravitational microlensing.
     </p>
