updated CV(s), publications and HowsMyNHS link

--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -43,12 +43,6 @@
 	</div>
 
 	<div class = "dropdown">
-		<a href="../../other/DavidEllis_CV.pdf">
-			<button>CV</button>
-		</a>
-	</div>
-
-	<div class = "dropdown">
 		<a href="../../physics.html">
 			<button>Physics</button>
 		</a>
@@ -62,11 +56,20 @@
 			<a href="https://github.com/David-Ellis/m3p_merger" target="_blank">Peak Patch Analyser</a>
 			<a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">Press–Schechter Toolkit</a>
 			
-			<a href="https://howsmynhs.co.uk/" target="_blank">Hows my NHS?</a>
+			<a href="https://howsmynhs.github.io/" target="_blank">Hows my NHS?</a>
 			<a href="../../mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
 			
 			<a href="../../mini-projects\weather\weather.html">Weather app</a>
 			<a href="../../mini-projects\games\kaboom.html">First Kaboom</a>
+		</div>
+	</div>
+
+	<div class = "dropdown">
+		<button class="dropbtn" id="button3" onclick="myFunction('drop3')">CV <i class="fa fa-caret-down"></i></button>
+		<div class = "dropcont" id = "drop3">
+			
+			<a href="../../other/DavidEllis_CV.pdf" target="_blank">English</a>
+			<a href="../../other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
 		</div>
 	</div>
 
