--- a/physics.html
+++ b/physics.html
@@ -34,12 +34,6 @@
 	</div>
 
 	<div class = "dropdown">
-		<a href="other/DavidEllis_CV.pdf">
-			<button>CV</button>
-		</a>
-	</div>
-
-	<div class = "dropdown">
         <!-- dropdown class to get align left property -->
 		<button>Physics</button>
 	</div>
@@ -52,10 +46,19 @@
 			<a href="https://github.com/David-Ellis/m3p_merger" target="_blank">Peak Patch Analyser</a>
 			<a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">Press–Schechter Toolkit</a>
 
-			<a href="https://howsmynhs.co.uk/" target="_blank">Hows my NHS?</a>
+			<a href="https://howsmynhs.github.io/" target="_blank">Hows my NHS?</a>
 			<a href="mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
 			<a href="mini-projects\weather\weather.html">Weather app</a>
 			<a href="mini-projects\games\kaboom.html">First Kaboom</a>
+		</div>
+	</div>
+
+	<div class = "dropdown">
+		<button class="dropbtn" id="button3" onclick="myFunction('drop3')">CV <i class="fa fa-caret-down"></i></button>
+		<div class = "dropcont" id = "drop3">
+			
+			<a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
+			<a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
 		</div>
 	</div>
 
@@ -127,9 +130,9 @@
     <h2>Publications</h2>
     <ul>
         <li><b>Miniclusters Made Easy</b>. In: Physical Review D. Vol. 103, No. 083525, 2021.
-            <a href="https://arxiv.org/abs/2006.08637">arXiv:2006.08637</a></li>
-        <li><b>Structure of Axion Miniclusters</b>. Submitted to publisher. 
-            <a href="https://arxiv.org/abs/2204.13187">arXiv:2204.13187</a></li>
+            <a href="https://arxiv.org/abs/2006.08637v2">arXiv:2006.08637</a></li>
+        <li><b>Structure of Axion Miniclusters</b>. In: Physical Review D. Vol. 106, Iss. 10 — 15 November 2022. 
+            <a href="https://arxiv.org/abs/2204.13187v2">arXiv:2204.13187</a></li>
         <li><b>Axion Miniclusters: Formation, Structure and Observational Signatures</b> (PhD Thesis). 
             <a href="http://dx.doi.org/10.53846/goediss-9416">doi:10.53846/goediss-9416</a></li>
         <li><b>Introduction to Dark Matter</b> (Textbook). In preparation. </li>
