updated nav-link positions

--- a/index.html
+++ b/index.html
@@ -25,42 +25,43 @@
 
 <body>
 <div id = "nav-links">
+	<div id = "center-linkbox">
+		<div class = "dropdown">
+			<!-- dropdown class to get align left property -->
+			<button>Home</button>
+		</div>
 
-	<div class = "dropdown">
-		<!-- dropdown class to get align left property -->
-		<button>Home</button>
-	</div>
+		<div id = "right-links">
+			<div class = "dropdown">
+				<a href="physics.html">
+					<button>Physics</button>
+				</a>
+			</div>
 
-	<div class = "dropdown">
-		<a href="physics.html">
-			<button>Physics</button>
-		</a>
-	</div>
+			<div class = "dropdown">
+				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Projects <i class="fa fa-caret-down"></i></button>
+				<div class = "dropcont" id = "drop2">
+					<a href="https://github.com/David-Ellis/reg-vis" target="_blank">Regression Visualisation</a>
+					<a href="https://github.com/David-Ellis/m3p_merger" target="_blank">Peak Patch Analyser</a>
+					<a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">Press–Schechter Toolkit</a>
 
-	<div class = "dropdown">
-		<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Projects <i class="fa fa-caret-down"></i></button>
-		<div class = "dropcont" id = "drop2">
+					<a href="https://howsmynhs.github.io/" target="_blank">Hows my NHS?</a>
+					<a href="mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
+					<a href="mini-projects\weather\weather.html">Weather app</a>
+					<a href="mini-projects\games\kaboom.html">First Kaboom</a>
+				</div>
+			</div>
 
-			<a href="https://github.com/David-Ellis/reg-vis" target="_blank">Regression Visualisation</a>
-			<a href="https://github.com/David-Ellis/m3p_merger" target="_blank">Peak Patch Analyser</a>
-			<a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">Press–Schechter Toolkit</a>
-
-			<a href="https://howsmynhs.github.io/" target="_blank">Hows my NHS?</a>
-			<a href="mini-projects\pokegifs\pokegif.html">Pokégif finder</a>
-			<a href="mini-projects\weather\weather.html">Weather app</a>
-			<a href="mini-projects\games\kaboom.html">First Kaboom</a>
+			<div class = "dropdown">
+				<button class="dropbtn" id="button3" onclick="myFunction('drop3')">CV <i class="fa fa-caret-down"></i></button>
+				<div class = "dropcont" id = "drop3">
+					
+					<a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
+					<a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
+				</div>
+			</div>
 		</div>
 	</div>
-
-	<div class = "dropdown">
-		<button class="dropbtn" id="button3" onclick="myFunction('drop3')">CV <i class="fa fa-caret-down"></i></button>
-		<div class = "dropcont" id = "drop3">
-			
-			<a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
-			<a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
-		</div>
-	</div>
-
 </div>
 
 <div>
