--- a/index.html
+++ b/index.html
@@ -64,12 +64,32 @@
 	</div>
 </div>
 
-<div>
+<div class = "home-box">
+	<img src="images/me2.jpg" id="mypic" alt="Picture of me, David Ellis." >
+	<div id = "hi">
+		<h2>Dr David Ellis</h2>
+		<ul>
+			<li>📊 Data Analyst at Birmingham City Council</li>
+			<li>🌌 Astrophysics PhD Graduate</li>
+			<li>👨‍💻 Professional experience using Python, R and SQL</li>
+			<li>🤝 Passionate about being relationships with stakeholders</li>
+			<li>🏅 Certified Professional Data Analyst by DataCamp</li>
+		  </ul> 
+	</div>	
 
-	<img src="images/me.jpg" id="mypic" alt="Picture of me, David Ellis." >
+	<hr> 
 
-	<p id = "hi">Hi, I'm David Ellis. Click the navigation links above to check out what I've been up to.</p>
-	</p>	
+	<div class="socials">
+		<a href="https://www.linkedin.com/in/david-john-ellis/" target="_blank">
+			<img src="images/social_links/linkedin_blue.png" alt="LinkedIn Logo" >
+		</a>
+		<a href="https://github.com/David-Ellis" target="_blank">
+			<img src="images/social_links/github_blue.png" alt="GitHub Logo" >
+		</a>
+		<a href="https://app.datacamp.com/profile/davidellis" target="_blank">
+			<img src="images/social_links/datacamp_blue.png" alt="DataCamp Logo" >
+		</a>
+	</div>
 
 </div>
 
