improved sizing for small screens

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,13 @@
 
 <div class = "porfolio-box">
     
-    <p style="text-align: center;margin-top: 10;font-size: 2em;">🔨 Under construction 👷‍♀️</p>
+    <div id="myBtnContainer">
+        <button class="btn active" onclick="filterSelection('All')"> All</button>
+        <button class="btn" onclick="filterSelection('vis')"> #DataVisualisation</button>
+        <button class="btn" onclick="filterSelection('analytics')"> #DataAnalytics</button>
+        <button class="btn" onclick="filterSelection('webdev')"> #WebDevelopment</button>
+        <button class="btn" onclick="filterSelection('science')"> #Science</button>
+      </div>
 
 </div>
 
