portfolio filter buttons added

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,10 @@
 	
 	<title>David Ellis - Axion Minicluster PhD</title>
 	<link rel="stylesheet" href="style/main-style.css">
-	<script src="scripts/main-script.js"></script>
 	<link rel="stylesheet" href="style/main-narrow.css">
+    <link rel="stylesheet" href="style/portfolio-style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="scripts/main-script.js"></script>
 
 </head>
 
@@ -50,8 +51,8 @@
         </div>
 
         <div class = "dropdown">
-            <button class="dropbtn" id="button3" onclick="myFunction('drop3')">CV <i class="fa fa-caret-down"></i></button>
-            <div class = "dropcont" id = "drop3">
+            <button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
+            <div class = "dropcont" id = "drop2">
                 
                 <a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
                 <a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
@@ -70,6 +71,15 @@
         <button class="btn" onclick="filterSelection('webdev')"> #WebDevelopment</button>
         <button class="btn" onclick="filterSelection('science')"> #Science</button>
       </div>
+
+      <div class="portfolio-container">
+        <div class="filterDiv analytics">RegVis</div>
+        <div class="filterDiv vis analytics">GP-Mapper</div>
+        <div class="filterDiv vis webdev">How's My NHS?</div>
+        <div class="filterDiv science">ps-toolkit</div>
+        <div class="filterDiv science">m3p_meger</div>
+      </div>
+      
 
 </div>
 
