Implemented portfolio filter function

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 <div class = "porfolio-box">
     
     <div id="myBtnContainer">
-        <button class="btn active" onclick="filterSelection('All')"> All</button>
+        <button class="btn active" onclick="filterSelection('all')"> All</button>
         <button class="btn" onclick="filterSelection('vis')"> #DataVisualisation</button>
         <button class="btn" onclick="filterSelection('analytics')"> #DataAnalytics</button>
         <button class="btn" onclick="filterSelection('webdev')"> #WebDevelopment</button>
@@ -84,4 +84,7 @@
 </div>
 
 </body>
+<!-- script for portfolio filters -->
+<script src="scripts/portfolio-script.js"></script>
+
 </html>
