--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="portfolio.html">
+				<a href="portfolio/portfolio.html">
 					<button>Portfolio 💾</button>
 				</a>
 			</div>
 
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="physics.html">
+				<a href="physics/physics.html">
 					<button>Physics</button>
 				</a>
 			</div>	
@@ -52,7 +52,6 @@
 			<div class = "dropdown">
 				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
 				<div class = "dropcont" id = "drop2">
-					
 					<a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
 					<a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
 				</div>
