--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -68,13 +68,13 @@
 
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="../../portfolio.html">
+				<a href="../../portfolio/portfolio.html">
 					<button>Portfolio 💾</button>
 				</a>
 			</div>
 	
 			<div class = "dropdown">
-				<a href="../../physics.html">
+				<a href="../../physics/physics.html">
 					<button>Physics</button>
 				</a>
 			</div>
