--- a/physics/physics.html
+++ b/physics/physics.html
@@ -16,9 +16,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>David Ellis - Axion Minicluster PhD</title>
-	<link rel="stylesheet" href="style/main-style.css">
-	<script src="scripts/main-script.js"></script>
-	<link rel="stylesheet" href="style/main-narrow.css">
+	<link rel="stylesheet" href="../style/main-style.css">
+	<script src="../scripts/main-script.js"></script>
+	<link rel="stylesheet" href="../style/main-narrow.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -28,7 +28,7 @@
     <div id = "center-linkbox">
         <div class = "dropdown">
             <!-- dropdown class to get align left property -->
-            <a href="index.html">
+            <a href="../index.html">
                 <button>Home</button>
             </a>
         </div>
@@ -36,7 +36,7 @@
         <div id = "right-links">
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
-				<a href="portfolio.html">
+				<a href="../portfolio/portfolio.html">
 					<button>Portfolio 💾</button>
 				</a>
 			</div>
@@ -54,8 +54,8 @@
             <button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
             <div class = "dropcont" id = "drop2">
                 
-                <a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
-                <a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
+                <a href="../other/DavidEllis_CV.pdf" target="_blank">English</a>
+                <a href="../other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
             </div>
         </div>
     </div>
