--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -3,24 +3,16 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YFWY2SLGWT"></script>
-	<script>	
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'G-YFWY2SLGWT');
-	</script>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>David Ellis - Axion Minicluster PhD</title>
-	<link rel="stylesheet" href="style/main-style.css">
-	<link rel="stylesheet" href="style/main-narrow.css">
-    <link rel="stylesheet" href="style/portfolio-style.css">
+	<link rel="stylesheet" href="../style/main-style.css">
+	<link rel="stylesheet" href="../style/main-narrow.css">
+    <link rel="stylesheet" href="../style/portfolio-style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="scripts/main-script.js"></script>
+    <script src="../scripts/main-script.js"></script>
 
 </head>
 
@@ -29,7 +21,7 @@
     <div id = "center-linkbox">
 	<div class = "dropdown">
 		<!-- dropdown class to get align left property -->
-        <a href="index.html">
+        <a href="../index.html">
 			<button>Home</button>
 		</a>
 	</div>
@@ -45,7 +37,7 @@
 
         <div class = "dropdown">
             <!-- dropdown class to get align left property -->
-            <a href="physics.html">
+            <a href="../physics/physics.html">
                 <button>Physics</button>
             </a>
         </div>
@@ -54,8 +46,8 @@
             <button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
             <div class = "dropcont" id = "drop2">
                 
-                <a href="other/DavidEllis_CV.pdf" target="_blank">English</a>
-                <a href="other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
+                <a href="../other/DavidEllis_CV.pdf" target="_blank">English</a>
+                <a href="../other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
             </div>
         </div>
     </div>
@@ -85,6 +77,6 @@
 
 </body>
 <!-- script for portfolio filters -->
-<script src="scripts/portfolio-script.js"></script>
+<script src="../scripts/portfolio-script.js"></script>
 
 </html>
