basic portfolio projects added

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -65,11 +65,60 @@
       </div>
 
       <div class="portfolio-container">
-        <div class="filterDiv analytics">RegVis</div>
-        <div class="filterDiv vis analytics">GP-Mapper</div>
-        <div class="filterDiv vis webdev">How's My NHS?</div>
-        <div class="filterDiv science">ps-toolkit</div>
-        <div class="filterDiv science">m3p_meger</div>
+
+        <div class="filterDiv analytics">
+            <a href="https://github.com/David-Ellis/reg-vis" target="_blank">
+                <img src="images/reg-vis.PNG" alt="Table of regression results made using reg-vis." >
+                <h3>RegVis</h3>
+            </a>
+            </hr>
+            <p> Python module to automatically visualise simple regression results in a way that is easy to read and interpret. </p>
+        </div>
+
+        <div class="filterDiv vis analytics">
+            <a href="#" target="_blank">
+                <img src="images/GP-mapper.png" alt="Choropleth map of Birmingham City showing dummy different colours for each ward. Data is randomly generated." >
+                <h3>GP-Mapper</h3>
+            </a>
+            </hr>
+            <p> 
+                R module designed to automatically convert GP-level counts to a ward, constituency or locality level, 
+                and produce customisable choropleth maps, for Birmingham GP data.
+            </p>
+        </div>
+
+        <div class="filterDiv vis webdev">
+            <a href="https://howsmynhs.github.io/" target="_blank">
+                <img src="images/hows-my-nhs.png" alt="Homepage of the website How's My NHS?" >
+                <h3>How's My NHS?</h3>
+            </a>
+            </hr>
+            <p> 
+                Searchable website presenting A&E waiting times and overnight bed availability for each NHS Trust in England.
+            </p>
+        </div>
+        <div class="filterDiv science">
+            <a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">
+                <img src="images/ps-toolkit.png" alt="" >
+                <h3>ps-toolkit</h3>
+            </a>
+            </hr>
+            <p> 
+                Python module for calculating halo mass functions from from 1D matter-power spectrum using the Press–Schechter Formalism.
+            </p>
+        </div>
+        
+
+        <div class="filterDiv science">
+            <a href="https://github.com/David-Ellis/m3p_merger" target="_blank">
+                <img src="images/m3p-merger.png" alt="" >
+                <h3>m3p_merger</h3>
+            </a>
+            </hr>
+            <p> 
+                Python module for building dark matter halo merger trees from the output of peak-patch code m3p.
+            </p>
+        </div>
       </div>
       
 
