added weather page to portfolio

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -119,8 +119,19 @@
                 Python module for building dark matter halo merger trees from the output of peak-patch code m3p.
             </p>
         </div>
-      </div>
+
+      <div class="filterDiv webdev">
+        <a href="../mini-projects/weather/weather.html" target="_blank">
+            <img src="images/weather.PNG" alt="" >
+            <h3>Weather Website</h3>
+        </a>
+        <hr>
+        <p> 
+            Webdesign project using a postcode and weather API to present the upcoming weather for the given UK postcode.
+        </p>
+    </div>
       
+  </div>
 
 </div>
 
