--- a/mini-projects/pokegifs/pokegif.html
+++ b/mini-projects/pokegifs/pokegif.html
@@ -69,18 +69,18 @@
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
 				<a href="../../portfolio/portfolio.html">
-					<button>Portfolio 💾</button>
+					<button>Portfolio</button>
 				</a>
 			</div>
 	
 			<div class = "dropdown">
 				<a href="../../physics/physics.html">
-					<button>Physics</button>
+					<button>PhD Work</button>
 				</a>
 			</div>
 
 			<div class = "dropdown">
-				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
+				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV</button>
 				<div class = "dropcont" id = "drop2">
 					
 					<a href="../../other/DavidEllis_CV.pdf" target="_blank">English</a>
