--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -48,7 +48,7 @@
 			<div class = "dropdown">
 				<!-- dropdown class to get align left property -->
 				<a href="../../portfolio.html">
-					<button>Portfolio 💾</button>
+					<button>Portfolio</button>
 				</a>
 			</div>
 
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class = "dropdown">
-				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
+				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV</button>
 				<div class = "dropcont" id = "drop2">
 					
 					<a href="../../other/DavidEllis_CV.pdf" target="_blank">English</a>
