--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -31,19 +31,19 @@
         <div class = "dropdown">
             <!-- dropdown class to get align left property -->
             <a href="portfolio.html">
-                <button>Portfolio 💾</button>
+                <button>Portfolio</button>
             </a>
         </div>
 
         <div class = "dropdown">
             <!-- dropdown class to get align left property -->
             <a href="../physics/physics.html">
-                <button>Physics</button>
+                <button>PhD Work</button>
             </a>
         </div>
 
         <div class = "dropdown">
-            <button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV <i class="fa fa-caret-down"></i></button>
+            <button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV</button>
             <div class = "dropcont" id = "drop2">
                 
                 <a href="../other/DavidEllis_CV.pdf" target="_blank">English</a>
