--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 
 <div class = "home-box">
-	<img src="images/me2.jpg" id="mypic" alt="Picture of me, David Ellis." >
+	<img src="images/me3.png" id="mypic" alt="Picture of me, David Ellis." >
 	<div id = "hi">
 		<h2>Dr David Ellis</h2>
 		<ul>
