--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -50,6 +50,7 @@
                 <a href="../other/DavidEllis_Lebenslauf.pdf" target="_blank">German</a>
             </div>
         </div>
+        
     </div>
 </div>
 </div>
@@ -128,6 +129,18 @@
         <hr>
         <p> 
             Webdesign project using a postcode and weather API to present the upcoming weather for the given UK postcode.
+        </p>
+    </div>
+
+
+    <div class="filterDiv webdev">
+        <a href="../mini-projects/pokegifs/pokegif.html" target="_blank">
+            <img src="images/pokegif.PNG" alt="" >
+            <h3>Pokégif Finder</h3>
+        </a>
+        <hr>
+        <p> 
+            Searchable website using an API to find Pokémon gifs.
         </p>
     </div>
 
