fixed incorrect file path

--- a/physics/physics.html
+++ b/physics/physics.html
@@ -155,12 +155,12 @@
     <h2>Previous work</h2>
     <ul>
         <li><b>Masters thesis</b>: 
-            <a href = "physics/MastersThesis.pdf">
+            <a href = "MastersThesis.pdf">
             Using the Earth’s Magnetic field to constrain the Coupling Strength between Photons and Axions</a>.
         </li>
 
         <li><b>Bachelors thesis</b>: 
-            <a href = "physics/BachelorsThesis.pdf">
+            <a href = "BachelorsThesis.pdf">
             The Use of Dark Matter Modulation to Constrain WIMP Mass and Infer Substructure in its Distribution</a>.
         </li>
 
