added tags to portfolio projects

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class = "home-box">
 	<img src="images/me3.png" id="mypic" alt="Picture of me, David Ellis." >
 	<div id = "hi">
-		<h2>Dr David Ellis</h2>
+		<h2>Hi, I'm Dr David Ellis:</h2>
 		<ul>
 			<li>📊 Data Analyst at Birmingham City Council</li>
 			<li>🌌 Astrophysics PhD Graduate</li>
