--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -62,18 +62,26 @@
         <button class="btn" onclick="filterSelection('vis')"> #DataVisualisation</button>
         <button class="btn" onclick="filterSelection('analytics')"> #DataAnalytics</button>
         <button class="btn" onclick="filterSelection('webdev')"> #WebDevelopment</button>
-        <button class="btn" onclick="filterSelection('science')"> #Science</button>
+        <button class="btn" onclick="filterSelection('physics')"> #Physics</button>
       </div>
 
       <div class="portfolio-container">
 
-        <div class="filterDiv analytics">
+        <div class="filterDiv vis analytics">
             <a href="https://github.com/David-Ellis/reg-vis" target="_blank">
                 <img src="images/reg-vis.PNG" alt="Table of regression results made using reg-vis." >
                 <h3>RegVis</h3>
             </a>
             <hr>
-            <p> Python module to automatically visualise simple regression results in a way that is easy to read and interpret. </p>
+            <p> Python module to automatically visualise regression results in a way that is easy to read and interpret.</p>
+            <p class = "hashtag">
+                <span class="python">#Python </span>
+                <span class="datavis">#DataVis </span>
+                <span class="matplotlib">#matplotlib </span>
+                <span class="numpy">#numpy </span>
+                <span class="pandas">#pandas </span>
+            </p>
+
         </div>
 
         <div class="filterDiv vis analytics">
@@ -86,9 +94,15 @@
                 R module designed to automatically convert GP-level counts to a ward, constituency or locality level, 
                 and produce customisable choropleth maps, for Birmingham GP data.
             </p>
+            <p class = "hashtag">
+                <span class="R">#R </span>
+                <span class="datavis">#DataVis </span>
+                <span class="dplyr">#dplyr </span>
+                <span class="maps">#tmap </span>
+            </p>
         </div>
 
-        <div class="filterDiv science">
+        <div class="filterDiv physics">
             <a href="https://ediss.uni-goettingen.de/handle/11858/14266" target="_blank">
                 <img src="images/thesis.PNG" alt="" >
                 <h3>PhD Thesis: Axion Miniclusters</h3>
@@ -96,6 +110,11 @@
             <hr>
             <p> 
                 My final PhD thesis on the formation, structure, and observational signatures of axion miniclusters.
+            </p>
+            <p class = "hashtag">
+                <span class="physics">#physics </span>
+                <span class="python">#Python </span>
+                <span class="latex">#LaTeX </span>
             </p>
         </div>
 
@@ -108,10 +127,18 @@
             <p> 
                 Searchable website presenting A&E waiting times and overnight bed availability for each NHS Trust in England.
             </p>
+            <p class = "hashtag">
+                <span class="python">#python </span>
+                <span class="WebDev">#WebDev </span>
+                <span class="html">#html </span>
+                <span class="css">#css </span>
+                <span class="js">#JavaScript </span>
+
+            </p>
         </div>
         
 
-        <div class="filterDiv science">
+        <div class="filterDiv physics">
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514" target="_blank">
                 <img src="images/amc-structure.png" alt="" >
                 <h3>Structure of axion miniclusters</h3>
@@ -122,9 +149,14 @@
                 Given editors suggestion and <a href="https://physics.aps.org/articles/v15/s152", style = "color: blue">featured</a> in Physics Magazine.
                 <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514", style = "color: blue">David Ellis et al. (2022) PhysRevD.</a>
             </p>
+            <p class = "hashtag">
+                <span class="physics">#physics </span>
+                <span class="python">#Python </span>
+                <span class="latex">#LaTeX </span>
+            </p>
         </div>
 
-        <div class="filterDiv science">
+        <div class="filterDiv physics">
             <a href="https://github.com/David-Ellis/ps-toolkit" target="_blank">
                 <img src="images/ps-toolkit.png" alt="" >
                 <h3>ps-toolkit</h3>
@@ -133,9 +165,16 @@
             <p> 
                 Python module for calculating halo mass functions from from 1D matter-power spectrum using the Press–Schechter Formalism.
             </p>
+            <p class = "hashtag">
+                <span class="physics">#physics </span>
+                <span class="python">#Python </span>
+                <span class="scipy">#scipy </span>
+                <span class="matplotlib">#matplotlib </span>
+                <span class="numpy">#numpy </span>
+            </p>
         </div>
 
-        <div class="filterDiv science">
+        <div class="filterDiv physics">
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.103514" target="_blank">
                 <img src="images/amc-easy.PNG" alt="" >
                 <h3>Axion Miniclusters Made Easy</h3>
@@ -143,11 +182,15 @@
             <hr>
             <p> 
                 Publication: Using semi-analytical methods to simulate formation of dark matter structure in the early universe. <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.103.083525", style = "color: blue">David Ellis et al. (2021) PhysRevD.</a>
-                
+            </p>
+            <p class = "hashtag">
+                <span class="physics">#physics </span>
+                <span class="python">#Python </span>
+                <span class="latex">#LaTeX </span>
             </p>
         </div>
 
-        <div class="filterDiv science">
+        <div class="filterDiv physics">
             <a href="https://github.com/David-Ellis/m3p_merger" target="_blank">
                 <img src="images/m3p-merger.png" alt="" >
                 <h3>m3p_merger</h3>
@@ -155,6 +198,13 @@
             <hr>
             <p> 
                 Python module for building dark matter halo merger trees from the output of peak-patch code m3p.
+            </p>
+            <p class = "hashtag">
+                <span class="physics">#physics </span>
+                <span class="python">#Python </span>
+                <span class="scipy">#scipy </span>
+                <span class="matplotlib">#matplotlib </span>
+                <span class="numpy">#numpy </span>
             </p>
         </div>
 
@@ -167,6 +217,14 @@
         <p> 
             Webdesign project using a postcode and weather API to present the upcoming weather for the given UK postcode.
         </p>
+        <p class = "hashtag">
+            <span class="WebDev">#WebDev </span>
+            <span class="html">#html </span>
+            <span class="js">#JavaScript </span>
+            <span class="css">#css </span>
+            <span class="api">#API </span>
+        </p>
+
     </div>
 
 
@@ -179,9 +237,16 @@
         <p> 
             Searchable website using an API to find Pokémon gifs.
         </p>
+        <p class = "hashtag">
+            <span class="WebDev">#WebDev </span>
+            <span class="html">#html </span>
+            <span class="js">#JavaScript </span>
+            <span class="css">#css </span>
+            <span class="api">#API </span>
+        </p>
     </div>
 
-    <div class="filterDiv science">
+    <div class="filterDiv physics">
         <a href="../physics/MastersThesis.pdf" target="_blank">
             <img src="images/masters-thesis.PNG" alt="" >
             <h3>Masters Thesis: Detecting Axions</h3>
@@ -189,6 +254,11 @@
         <hr>
         <p> 
             In this investigation, we consider using the Earth’s magnetic field to detect axion like particles.
+        </p>
+        <p class = "hashtag">
+            <span class="physics">#physics </span>
+            <span class="python">#Python </span>
+            <span class="latex">#LaTeX </span>
         </p>
     </div>
 
@@ -201,6 +271,11 @@
         <p> 
             Game made using PyGame where the objective is to overtake as many cars as possible without crashing.
         </p>
+        <p class = "hashtag">
+            <span class="GameDev">#GameDev </span>
+            <span class="python">#Python </span>
+            <span class="pygame">#pygame </span>
+        </p>
     </div>
 
     <div class="filterDiv">
@@ -211,6 +286,11 @@
         <hr>
         <p> 
             Multiplayer tank game built as a matplotlib GUI including projectile motion and variable wind speed.  
+        </p>
+        <p class = "hashtag">
+            <span class="GameDev">#GameDev </span>
+            <span class="python">#Python </span>
+            <span class="matplotlib">#matplotlib </span>
         </p>
     </div>
 
