updated nav headings

--- a/mini-projects/weather/weather.html
+++ b/mini-projects/weather/weather.html
@@ -54,12 +54,12 @@
 
 			<div class = "dropdown">
 				<a href="../../physics.html">
-					<button>Physics</button>
+					<button>PhD</button>
 				</a>
 			</div>
 
 			<div class = "dropdown">
-				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV</button>
+				<button class="dropbtn" id="button2" onclick="myFunction('drop2')">Resume</button>
 				<div class = "dropcont" id = "drop2">
 					
 					<a href="../../other/DavidEllis_CV.pdf" target="_blank">English</a>
