--- a/physics/physics.html
+++ b/physics/physics.html
@@ -45,13 +45,13 @@
             <div class = "dropdown">
                 <!-- dropdown class to get align left property -->
                 <a href="physics.html">
-                    <button>PhD Work</button>
+                    <button>PhD</button>
                 </a>
             </div>
     
 
         <div class = "dropdown">
-            <button class="dropbtn" id="button2" onclick="myFunction('drop2')">CV</button>
+            <button class="dropbtn" id="button2" onclick="myFunction('drop2')">Resume</button>
             <div class = "dropcont" id = "drop2">
                 
                 <a href="../other/DavidEllis_CV.pdf" target="_blank">English</a>
