--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 
 <div class = "home-box">
-	<img src="images/me2.jpg" id="mypic" alt="Picture of me, David Ellis." >
+	<img src="images/me.jpg" id="mypic" alt="Picture of me, David Ellis." >
 	<div id = "hi">
 		<h2>Hi, I'm Dr David Ellis:</h2>
 		<ul>
@@ -77,13 +77,13 @@
 
 	<div class="socials">
 		<a href="https://www.linkedin.com/in/david-john-ellis/" target="_blank">
-			<img src="images/social_links/linkedin_blue.png" alt="LinkedIn Logo" >
+			<img src="images/social_links/linkedin.png" alt="LinkedIn Logo" >
 		</a>
 		<a href="https://github.com/David-Ellis" target="_blank">
-			<img src="images/social_links/github_blue.png" alt="GitHub Logo" >
+			<img src="images/social_links/github.png" alt="GitHub Logo" >
 		</a>
 		<a href="https://app.datacamp.com/profile/davidellis" target="_blank">
-			<img src="images/social_links/datacamp_blue.png" alt="DataCamp Logo" >
+			<img src="images/social_links/datacamp.png" alt="DataCamp Logo" >
 		</a>
 	</div>
 
